# deep_fake_detection

./: .gitignore  README.md  app.py  dataset_construction.ipynb  pyproject.toml  utils.py
.github/: pull_request_template.md
notebooks/: EfficientNet.ipynb  efficient-net.ipynb  efficientnet_image_classification.ipynb  face-crop-grad-cam.ipynb  fourier_transform.ipynb  resnet.ipynb  resnet18_image_classification.ipynb  simple-cnn.ipynb  simpleCNN.ipynb  simplecnn_image_classification.ipynb  xception.ipynb  xception_image_classification.ipynb
results/: Resnet18_image_classification_history.json  best_simpleCNN.pth  efficientnet_deepfake_detecction_aug.json  simpleCNN_deepfake_detection.json
results/efficient-net/: efficient-net_deepfake_detection_augmentation_fourier_finetuned_history.json  efficientnet_deepfake_detection_aug.json  efficientnet_deepfake_detection_history.json  efficientnet_no_aug.json  efficientnet_with_aug.json
results/efficientnet/: efficientnet_deepfake_detection_history.json
results/resnet18/: Resnet18_(data_augment_layer_3_layer_4)_finetuned_image_classification_history.json  Resnet18_deepfake_detection_augmentation_finetuned_history.json  Resnet18_deepfake_detection_augmentation_history.json  Resnet18_deepfake_detection_finetuned_history.json  Resnet18_deepfake_detection_history.json  Resnet18_finetuned_layer3_layer4_image_classification_history.json
results/simple-cnn/: simpleCNN_deepfake_detection_aug.json  (+4 more)
src/: __init__.py  dataloader.py  mesonet.py  model.py  preprocessing.py  simpleCNN.py  train.py  utils.py
webapp/: app.py
(+8 files in other folders)
